# AMQP-CPP-MyDev

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/windows/: CMakeLists.txt  SocketHandler.cpp  SocketHandler.h  libboostasio.cpp
